...
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="UnusedAttribute" />

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"

        >

        <RelativeLayout
            android:id="@+id/relative_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            >

...
                android:layout_below="@id/toRegisterTitle"

                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/setupRegisterStatus"
                android:text="@string/device_not_registered"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/setupDeviceRegisterInfo"
                android:layout_alignParentStart="true"
...
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp"
                />

            <EditText
                android:id="@+id/setupGroupNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/rect_text_edit"
                android:ems="10"
                android:hint="@string/group_name"
...
                android:layout_below="@id/deviceNameLabel"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/setupRegisterButton"
                android:text="@string/register"
                android:layout_height="wrap_content"
                android:onClick="registerButton"
                android:layout_width="match_parent"

                android:layout_below="@id/setupDeviceNameInput"
...
